--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,19 @@
 <footer>
-    <h1 class="big-title"><span class="thera">thera</span>Notes</h1>
+    <div class="footer-theranotes-description">
+        <h1 class="footer-big-title"><span class="thera">thera</span>Notes</h1>
+        <p class="description">theraNotes is a therapy-session note tracking app developed by web developer Cindy Wong. Check out some more of Cindy's work in the links to the right!</p>
+    </div>
+    <div class="footer-nav">
+        <p class="footer-nav-heading">theraNotes nav</p>
+
+        <a href="/home">Home</a>
+        <a href="/notes/new">Add New Session</a>
+        <a href="/logout" id="logout-link">Logout</a>
+    </div>
+    <div class="about-cindy">
+        <p class="about-cindy-links-heading">about cindy</p>
+
+        <a href="#">Github</a>
+        <a href="#">LinkedIn</a>
+    </div>
 </footer>
