--- a/views/client/new.ejs
+++ b/views/client/new.ejs
@@ -4,41 +4,42 @@
 
     <body>
         <%- include('../partials/header.ejs') %>
-
-        <div class="new-session-top-display">
-            <p class="new-session-start-planning-text">Start planning for your next session below.</p>
-        </div>
-
-
-        <form class="new-session-form" action="/notes" method="POST">
-            <div class="new-session-date-input">
-                Date of Session: <input type="date" name="date" min="2022-01-01" max="2050-01-01" required>
+        <main>
+            <div class="new-session-top-display">
+                <p class="new-session-start-planning-text">Start planning for your next session below.</p>
             </div>
 
-            <div class="new-session-pre-and-post-notes-container">
-                <div class="new-session-pre-session-area">
-                    <p class="pre-session-notes-subtitle">pre-session notes</p>
-                    <textarea class="new-session-note-input" name="preSessionNote" placeholder="Start typing here..."></textarea>
+
+            <form class="new-session-form" action="/notes" method="POST">
+                <div class="new-session-date-input">
+                    Date of Session: <input type="date" name="date" min="2022-01-01" max="2050-01-01" required>
                 </div>
-                <div class="new-session-post-session-area">
-                    <p class="post-session-notes-subtitle">post-session notes</p>
-                    <textarea class="new-session-note-input" name="postSessionNote" placeholder="Start typing here..."></textarea>
+
+                <div class="new-session-pre-and-post-notes-container">
+                    <div class="new-session-pre-session-area">
+                        <p class="pre-session-notes-subtitle">pre-session notes</p>
+                        <textarea class="new-session-note-input" name="preSessionNote" placeholder="Start typing here..."></textarea>
+                    </div>
+                    <div class="new-session-post-session-area">
+                        <p class="post-session-notes-subtitle">post-session notes</p>
+                        <textarea class="new-session-note-input" name="postSessionNote" placeholder="Start typing here..."></textarea>
+                    </div>
                 </div>
+
+                <!-- Save & Send to Therapist button... how to implement? -->
+                <div class="new-session-save-buttons-container">
+                    <a href=""><button class="new-page-button">save & send to therapist</button></a>
+
+                    <!-- Save button aka Create Route!!! -->
+                    <input class="new-page-button" type="submit" value="save">
+                </div>
+
+            </form>
+
+            <div class="back-button-area">
+                <a href="/home"><button class="new-page-button">back</button></a>
             </div>
-
-            <!-- Save & Send to Therapist button... how to implement? -->
-            <div class="new-session-save-buttons-container">
-                <a href=""><button class="new-page-button">save & send to therapist</button></a>
-
-                <!-- Save button aka Create Route!!! -->
-                <input class="new-page-button" type="submit" value="save">
-            </div>
-
-        </form>
-
-        <div class="back-button-area">
-            <a href="/home"><button class="new-page-button">back</button></a>
-        </div>
+        </main>
         <%- include('../partials/footer') %>
     </body>
 </html>
