--- a/views/client/show.ejs
+++ b/views/client/show.ejs
@@ -4,38 +4,39 @@
 
     <body>
         <%- include('../partials/header.ejs') %>
+        <main>
+            <div class="show-session-top-display">
+                <p class="show-session-your-session-on-text">Your session on <%= date %></p>
+            </div>
 
-        <div class="show-session-top-display">
-            <p class="show-session-your-session-on-text">Your session on <%= date %></p>
-        </div>
+            <div class="show-session-notes-display">
+                <div class="show-pre-session-notes-container">
+                    <p class="pre-session-notes-subtitle">pre-session notes</p>
+                    <div class="show-pre-session-notes-text">
+                        <%= note.preSessionNote %>
+                    </div>
+                </div>
 
-        <div class="show-session-notes-display">
-            <div class="show-pre-session-notes-container">
-                <p class="pre-session-notes-subtitle">pre-session notes</p>
-                <div class="show-pre-session-notes-text">
-                    <%= note.preSessionNote %>
+                <div class="show-post-session-notes-container">
+                    <p class="post-session-notes-subtitle">post-session notes</p>
+                    <div class="show-post-session-notes-text">
+                        <%= note.postSessionNote %>
+                    </div>
                 </div>
             </div>
 
-            <div class="show-post-session-notes-container">
-                <p class="post-session-notes-subtitle">post-session notes</p>
-                <div class="show-post-session-notes-text">
-                    <%= note.postSessionNote %>
-                </div>
+            <div class="show-session-buttons-area">
+                <a href="/notes/<%= note._id %>/edit"><button>edit</button></a>
+
+                <form action="/notes/<%= note._id %>?_method=DELETE" method="POST" class="show-session-delete-button">
+                    <input type="submit" value="delete session">
+                </form>
             </div>
-        </div>
 
-        <div class="show-session-buttons-area">
-            <a href="/notes/<%= note._id %>/edit"><button>edit</button></a>
-
-            <form action="/notes/<%= note._id %>?_method=DELETE" method="POST" class="show-session-delete-button">
-                <input type="submit" value="delete session">
-            </form>
-        </div>
-
-        <div class="back-button-area">
-            <a href="/home"><button class="new-page-button">back</button></a>
-        </div>
+            <div class="back-button-area">
+                <a href="/home"><button class="new-page-button">back</button></a>
+            </div>
+        </main>
         <%- include('../partials/footer') %>
     </body> 
 </html>
