--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <footer>
     <div class="footer-theranotes-description">
         <h1 class="footer-big-title"><span class="thera">thera</span>Notes</h1>
-        <p class="description">theraNotes is a therapy-session note tracking app developed by web developer Cindy Wong. Check out some more of Cindy's work in the links to the right!</p>
+        <p class="description">theraNotes is a therapy-session note tracking app developed by web developer Cindy Wong. Check out some more of Cindy's work in the links provided.</p>
     </div>
     <div class="footer-nav">
         <p class="footer-nav-heading">theraNotes nav</p>
