added about me links to footer

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -13,7 +13,8 @@
     <div class="about-cindy">
         <p class="about-cindy-links-heading">about cindy</p>
 
-        <a href="#">Github</a>
-        <a href="#">LinkedIn</a>
+        <a href="https://github.com/cinduhrz">Github</a>
+        <a href="https://www.linkedin.com/in/cindywongdev/">LinkedIn</a>
+        <a href="https://github.com/cinduhrz/Project2-theraNotes">theraNotes Repo</a>
     </div>
 </footer>
