--- a/public/styles.css
+++ b/public/styles.css
@@ -19,8 +19,13 @@ main {
     border-bottom: 0.15rem solid black;
 }
 
-/* .mobile-side-nav {
-    display: none;
+.logo-a-tag{
+    text-decoration: none;
+    color: black;
+}
+
+/* .logo-a-tag:visited {
+    text-decoration: none;
 } */
 
 .thera {
@@ -32,7 +37,6 @@ main {
     margin: 1.5rem 0rem 1.2rem 2rem;
     font-size: 4rem;
     font-family: 'Comfortaa', cursive;
-    
 }
 
 .menu-links-container {
