--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <header>
     <nav class="web-nav">
-        <h1 class="big-title"><span class="thera">thera</span>Notes</h1>
+        <a href="/home" class="logo-a-tag"><h1 class="big-title"><span class="thera">thera</span>Notes</h1></a>
         <div class="menu-links-container">
                 <a href="/home">Home</a>
                 <a href="/notes/new">Add New Session</a>
