finished signup route

--- a/views/client/new.ejs
+++ b/views/client/new.ejs
@@ -3,7 +3,7 @@
     <%- include('../partials/head.ejs', {title: "theraNotes | Add a New Session"}) %>
 
     <body>
-        <%- include('../partials/header.ejs') %>
+        <%- include('../partials/client-header.ejs') %>
         <main>
             <div class="new-session-top-display">
                 <p class="new-session-start-planning-text">Start planning for your next session below.</p>
