--- a/views/client/show.ejs
+++ b/views/client/show.ejs
@@ -3,7 +3,7 @@
     <%- include('../partials/head.ejs', {title: "theraNotes | View Session"}) %>
 
     <body>
-        <%- include('../partials/header.ejs') %>
+        <%- include('../partials/client-header.ejs') %>
         <main>
             <div class="show-session-top-display">
                 <p class="show-session-your-session-on-text">Your session on <%= date %></p>
