--- a/views/client/edit.ejs
+++ b/views/client/edit.ejs
@@ -3,7 +3,7 @@
     <%- include('../partials/head.ejs', {title: "theraNotes | Edit Session"}) %>
 
     <body>
-        <%- include('../partials/header.ejs') %>
+        <%- include('../partials/client-header.ejs') %>
         <main>
             <div class="edit-session-top-display">
                 <p class="edit-session-now-writing-text">Now writing for your session on <%= date %></p>
