--- a/views/client/index.ejs
+++ b/views/client/index.ejs
@@ -3,7 +3,7 @@
     <%- include('../partials/head.ejs', {title: "theraNotes"}) %>
 
     <body>
-        <%- include('../partials/header.ejs') %>
+        <%- include('../partials/client-header.ejs') %>
         <main>
             <div class="client-top-display">
                 <h4 class="client-top-display-welcome-back-text">Welcome back, user.</h4>
