--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,10 +6,14 @@
         <%- include('./partials/signup-login-header.ejs') %>
 
         <main>
-            <div class="theraNotes-main-display">
-
+            <div class="theranotes-main-display">
+                <div class="theranotes-text">
+                    <h1 class="welcome-to-theranotes">Welcome to theraNotes.</h3>
+                    <p class="theranotes-description">theranotes description here</p>
+                    <a href="/signup"><button>Get Started</button></a>
+                </div>
             </div>
         </main>
+        <%- include('./partials/footer.ejs') %>
     </body>
-
 </html>
