--- a/views/partials/signup-login-header.ejs
+++ b/views/partials/signup-login-header.ejs
@@ -1,6 +1,6 @@
 <header>
     <nav class="web-nav">
-        <a href="/home" class="logo-a-tag"><h1 class="big-title"><span class="thera">thera</span>Notes</h1></a>
+        <a href="/" class="logo-a-tag"><h1 class="big-title"><span class="thera">thera</span>Notes</h1></a>
 
         <div class="login-signup-buttons-container">
                 <a href="/login"><button>Login</button></a>
