--- a/views/partials/client-header.ejs
+++ b/views/partials/client-header.ejs
@@ -4,7 +4,10 @@
         <div class="menu-links-container">
                 <a href="/home">Home</a>
                 <a href="/notes/new">Add New Session</a>
-                <a href="/logout" id="logout-link">Logout</a>
+                <form action="/logout?_method=DELETE" method="POST">
+                    <!-- <a href="/logout" id="logout-link"></a> -->
+                    <input class="logout-button" type="submit" value="Logout">
+                </form>
         </div>
     </nav>
 
