--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -8,7 +8,10 @@
 
         <a href="/home">Home</a>
         <a href="/notes/new">Add New Session</a>
-        <a href="/logout" id="logout-link">Logout</a>
+        <form action="/logout?_method=DELETE" method="POST">
+            <!-- <a href="/logout" id="logout-link"></a> -->
+            <input class="logout-button" id="footer-nav-logout-button" type="submit" value="Logout">
+        </form>
     </div>
     <div class="about-cindy">
         <p class="about-cindy-links-heading">about cindy</p>
