--- a/views/client/index.ejs
+++ b/views/client/index.ejs
@@ -6,7 +6,7 @@
         <%- include('../partials/client-header.ejs') %>
         <main>
             <div class="client-top-display">
-                <h4 class="client-top-display-welcome-back-text">Welcome back, user.</h4>
+                <h4 class="client-top-display-welcome-back-text">Welcome back, <%= username %>.</h4>
                 <p class="client-top-display-start-planning-text">Start planning for your next session below.</p>
                 <a href="/notes/new"><button class="client-top-display-big-button">Plan for Next Session</button></a>
             </div>
