styled index page for web and mobile

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,13 +5,11 @@
     <body>
         <%- include('./partials/signup-login-header.ejs') %>
 
-        <main>
-            <div class="theranotes-main-display">
-                <div class="theranotes-text">
-                    <h1 class="welcome-to-theranotes">Welcome to theraNotes.</h3>
-                    <p class="theranotes-description">theranotes description here</p>
-                    <a href="/signup"><button>Get Started</button></a>
-                </div>
+        <main class="theranotes-main-display">
+            <div class="theranotes-text">
+                <h1 class="welcome-to-theranotes">Welcome to theraNotes.</h3>
+                <p class="theranotes-description">A place to jot down what's on your mind before therapy and your insights after therapy. theraNotes makes it easy to keep track of your progress throughout your therapy journey.</p>
+                <a href="/signup"><button class="index-page-button">Get Started</button></a>
             </div>
         </main>
         <%- include('./partials/footer.ejs') %>
