--- a/public/styles.css
+++ b/public/styles.css
@@ -7,6 +7,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    overflow-x: hidden;
 }
 
 main {
@@ -465,6 +466,47 @@ footer {
     margin: 1% 1% 1% 0;
 }
 
+.theranotes-main-display {
+    height: 100%;
+    display: grid;
+    grid-template-rows: 1fr 2fr;
+}
+
+.theranotes-text {
+    grid-row: 2/3;
+    margin-left: 10%;
+}
+
+.theranotes-description {
+    width: 40%;
+    font-size: 1.2rem;
+}
+
+.index-page-button {
+    font-size: 1.3rem;
+    padding: 0.75rem 1rem;
+    border: none;
+    border-radius: 1rem;
+    font-family: 'Nunito', sans-serif;
+    background-color: rgb(243, 140, 157);
+    color: white;
+    transition: 0.2s;
+}
+
+.index-page-button:hover {
+    background-color: rgb(255, 159, 175);
+    color: black;
+}
+
+.login-signup-buttons-container {
+    /* border: 1px solid red; */
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-right: 2rem;
+    width: 15%;
+}
+
 @media only screen and (max-width: 500px) {
     button, input[type="submit"] {
         -webkit-appearance: none;
@@ -687,6 +729,47 @@ footer {
     .about-cindy {
         margin-top: 0.5rem;
         padding-bottom: 3rem;
+    }
+
+    .theranotes-main-display {
+        height: 100%;
+        width: 100vw;
+        display: flex;
+        border-top: 1px solid black;
+        padding-bottom: 3rem;
+    }
+
+    .theranotes-text {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 2rem;
+        margin-right: 2rem;
+    }
+
+    .welcome-to-theranotes {
+        text-align: center;
+    }
+    
+    .theranotes-description {
+        width: 80%;
+        font-size: 1.2rem;
+    }
+
+    .index-page-button {
+        font-size: 1.2rem;
+    }
+
+    /* #signup-login-nav {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    } */
+
+    .login-signup-buttons-container {
+        /* border: 1px solid red; */
+        margin-left: 2rem;
+        margin-bottom: 1rem;
     }
 
 }
