--- a/views/partials/signup-login-header.ejs
+++ b/views/partials/signup-login-header.ejs
@@ -1,10 +1,10 @@
 <header>
-    <nav class="web-nav">
+    <nav class="web-nav" id="signup-login-nav">
         <a href="/" class="logo-a-tag"><h1 class="big-title"><span class="thera">thera</span>Notes</h1></a>
 
         <div class="login-signup-buttons-container">
-                <a href="/login"><button>Login</button></a>
-                <a href="/signup"><button>Signup</button></a>
+                <a href="/login"><button class="index-page-button">Login</button></a>
+                <a href="/signup"><button class="index-page-button">Signup</button></a>
         </div>
     </nav>
 </header>
