added firstName and lastName properties to user model

--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -16,6 +16,12 @@
                         <label>
                             password: <input type="password" name="password" required>
                         </label>
+                        <label>
+                            first name: <input type="text" name="firstName" required>
+                        </label>
+                        <label>
+                            last name: <input type="text" name="lastName" required>
+                        </label>
                         <input type="submit" value="Create Account">
                     </fieldset>
                 </form>
