--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -5,24 +5,37 @@
     <body>
         <%- include('../partials/signup-login-header.ejs') %>
         
-        <main>
-            <div>
+        <main class="login-signup-form-main">
+            <div class="login-signup-form-container">
                 <form action="/signup" method="POST">
-                    <fieldset>
-                        <legend>Sign up for theraNotes</legend>
-                        <label>
-                            username: <input type="text" name="username" required>
-                        </label>
-                        <label>
-                            password: <input type="password" name="password" required>
-                        </label>
-                        <label>
-                            first name: <input type="text" name="firstName" required>
-                        </label>
-                        <label>
-                            last name: <input type="text" name="lastName" required>
-                        </label>
-                        <input type="submit" value="Create Account">
+                    <fieldset id="signup-form">
+                        <legend class="signup-login-legend">Signup <span class="signup-login-form-description">
+                            Welcome to theraNotes! Get started by filling out the information below.
+                        </span></legend>
+                            <label class="first-name">
+                                <input type="text" name="firstName" placeholder="first name" required>
+                            </label>
+                            <label class="last-name">
+                                <input type="text" name="lastName" placeholder="last name"  required>
+                            </label>
+                            <label class="username">
+                                <input type="text" name="username" placeholder="username"  required>
+                            </label>
+                            <label class="password">
+                                <input type="password" name="password"  placeholder="password" required>
+                            </label>
+
+                            <input class="signup-login-button" type="submit" value="Create Account">
+
+                            <div id="signup-switch-text-container">
+
+                                <a href="/login" class="signup-login-switch-text">Already have an account? <span>Log in.</span></a>
+                                
+                            </div>
+
+                            
+
+
                     </fieldset>
                 </form>
             </div>
