--- a/public/styles.css
+++ b/public/styles.css
@@ -470,11 +470,17 @@ footer {
     height: 100%;
     display: grid;
     grid-template-rows: 1fr 2fr;
+    /* background-image: url(https://media.istockphoto.com/id/1288126175/photo/an-open-journal-and-pen-on-a-table-with-a-cup-of-tea-for-a-mental-health-break.jpg?s=612x612&w=0&k=20&c=oPJmCXzBEHICfUnxou2ZSTghhNKR3s1nJ5Efh1IrMv4=);
+    background-size: cover;
+    background-position: center; */
 }
 
 .theranotes-text {
     grid-row: 2/3;
     margin-left: 10%;
+    /* background-color: rgba(233, 233, 233, 0.5);
+    padding: 1rem;
+    display: inline-block; */
 }
 
 .theranotes-description {
@@ -495,7 +501,6 @@ footer {
 
 .index-page-button:hover {
     background-color: rgb(255, 159, 175);
-    color: black;
 }
 
 .login-signup-buttons-container {
@@ -507,7 +512,123 @@ footer {
     width: 15%;
 }
 
-@media only screen and (max-width: 500px) {
+.login-signup-form-main {
+    display: flex;
+    justify-content: center;
+}
+
+.login-signup-form-container {
+    background-color: pink;
+    width: 50%;
+    margin-top: 3rem;
+    padding-top: 2rem;
+    border-radius: 1rem;
+}
+
+#signup-form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    padding: 2rem;
+    border: none;
+}
+
+#login-form {
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+    border: none;
+}
+
+.signup-login-legend {
+    text-align: center;
+    font-size: 1.5rem;
+}
+
+.signup-login-form-description {
+    display: block;
+    font-size: 1.1rem;
+    margin: 1rem 0 0 0;
+    color: rgb(85, 85, 85);
+}
+
+#signup-form input, #login-form input {
+    box-sizing: border-box;
+    width: 100%;
+    margin: 0.75rem 0;
+    padding: 0.5rem;
+    font-size: 1.2rem;
+    font-family: 'Nunito', sans-serif;
+    border-radius: 0.5rem;
+    border: 1px solid black;
+}
+
+.first-name {
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+
+.first-name input {
+    width: 95% !important;
+}
+
+.last-name {
+    grid-column: 2/3;
+    grid-row: 1/2;
+}
+
+.last-name input {
+    width: 95% !important;
+    margin-left: 5% !important;
+}
+
+.username {
+    grid-column: 1/3;
+    grid-row: 2/3;
+}
+
+.password {
+    grid-column: 1/3;
+    grid-row: 3/4;
+}
+
+.signup-login-switch-text {
+    text-decoration: none;
+    text-align: center;
+    justify-self: center;
+}
+
+.signup-login-switch-text span {
+    color: rgb(224, 101, 122);
+}
+
+.signup-login-switch-text:visited {
+    color: rgb(85, 85, 85)
+}
+
+#signup-switch-text-container {
+    width: 200%;
+    display: flex;
+    justify-content: center;
+}
+
+.signup-login-button {
+    grid-column: 1/3;
+    grid-row: 4/5;
+    border: none !important;
+    background-color: rgb(243, 140, 157);
+    color: white;
+    transition: 0.2s;
+}
+
+.signup-login-button:hover {
+    cursor: pointer;
+    background-color: rgb(255, 159, 175);
+}
+
+
+
+@media only screen and (max-width: 600px) {
     button, input[type="submit"] {
         -webkit-appearance: none;
         background-color: rgb(233, 233, 233);
@@ -749,11 +870,13 @@ footer {
 
     .welcome-to-theranotes {
         text-align: center;
+        margin-bottom: 0;
     }
     
     .theranotes-description {
         width: 80%;
         font-size: 1.2rem;
+        margin-bottom: 2rem;
     }
 
     .index-page-button {
