--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -5,7 +5,7 @@
     <body>
         <%- include('../partials/signup-login-header.ejs') %>
         
-        <main class="login-signup-form-main">
+        <main class="login-signup-form-main" id="signup-main">
             <div class="login-signup-form-container">
                 <form action="/signup" method="POST">
                     <fieldset id="signup-form">
@@ -30,7 +30,7 @@
                             <div id="signup-switch-text-container">
 
                                 <a href="/login" class="signup-login-switch-text">Already have an account? <span>Log in.</span></a>
-                                
+
                             </div>
 
                             
