--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -5,21 +5,24 @@
     <body>
         <%- include('../partials/signup-login-header.ejs') %>
         
-        <main class="login-signup-form-main">
+        <main class="login-signup-form-main" id="login-main">
             <div class="login-signup-form-container">
                 <form action="/login" method="POST">
                     <fieldset id="login-form">
                         <legend class="signup-login-legend">Login<span class="signup-login-form-description">Welcome back! Please log in to your theraNotes account to continue.</span></legend>
-                        <label>
-                            <input type="text" name="username" placeholder="username" required>
-                        </label>
-                        <label>
-                            <input type="password" name="password" placeholder="password" required>
-                        </label>
+                        <div class="mobile-login-form-move-up">
+                            <label class="username">
+                                <input type="text" name="username" placeholder="username" required>
+                            </label>
+                            <label class="password">
+                                <input type="password" name="password" placeholder="password" required>
+                            </label>
 
-                        <input class="signup-login-button" type="submit" value="Login">
+                            <input class="signup-login-button" type="submit" value="Login">
 
-                        <a href="/signup" class="signup-login-switch-text" >Don't have an account? <span>Sign up.</span></a>
+                            <a href="/signup" class="signup-login-switch-text" >Don't have an account? <span>Sign up.</span></a>
+
+                        </div>
 
                     </fieldset>
                 </form>
