--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -20,7 +20,10 @@
 
                             <input class="signup-login-button" type="submit" value="Login">
 
-                            <a href="/signup" class="signup-login-switch-text" >Don't have an account? <span>Sign up.</span></a>
+                            <div id="login-switch-text-container">
+                                <a href="/signup" class="signup-login-switch-text" >Don't have an account? <span>Sign up.</span></a>
+
+                            </div>
 
                         </div>
 
