added username taken error page

--- a/views/client/new.ejs
+++ b/views/client/new.ejs
@@ -28,7 +28,7 @@
 
                 <!-- Save & Send to Therapist button... how to implement? -->
                 <div class="new-session-save-buttons-container">
-                    <a href=""><button class="new-page-button">save & send to therapist</button></a>
+                    <a href="#"><button class="new-page-button">save & send to therapist</button></a>
 
                     <!-- Save button aka Create Route!!! -->
                     <input class="new-page-button" type="submit" value="save">
