--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -9,7 +9,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Nunito:wght@200;400&display=swap" rel="stylesheet">
 
     <!-- Link Libraries -->
+        <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
+        <!-- alpineJS -->
+    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
     <!-- Link Our Files -->
     <script src="/static/app.js" defer></script>
