--- a/views/partials/signup-login-header.ejs
+++ b/views/partials/signup-login-header.ejs
@@ -3,7 +3,7 @@
         <a href="/" class="logo-a-tag"><h1 class="big-title"><span class="thera">thera</span>Notes</h1></a>
 
         <div class="login-signup-buttons-container">
-                <a href="/login"><button class="index-page-button">Login</button></a>
+                <a href="/login"><button id="login-button" class="index-page-button">Login</button></a>
                 <a href="/signup"><button class="index-page-button">Signup</button></a>
         </div>
     </nav>
